# UCBudgetTracker

./: .gitignore  .gitmodules  CMakeLists.txt  FinalProject.sln  README.md
.github/workflows/: main.yml
FinalProject/: FinalProject.vcxproj  FinalProject.vcxproj.filters
FinalProject/src/budget/: student_account.cpp  student_account.hpp
FinalProject/src/budget/calculate-ucs/: calculate_base.cpp  calculate_base.hpp  calculate_ucb.hpp  calculate_ucd.hpp  calculate_uci.hpp  calculate_ucla.cpp  calculate_ucm.hpp  calculate_ucr.hpp  calculate_ucsb.hpp  calculate_ucsc.cpp  calculate_ucsc.hpp  calculate_ucsd.cpp  calculate_ucsd.hpp
FinalProject/src/budget/funds/: funds_base.hpp  funds_loan.hpp  funds_monthly.hpp
FinalProject/src/imgui/: imgui_impl_opengl3.cpp
FinalProject/src/ui/: controller.hpp  view.hpp
budget-tracker/: imgui.ini
budget-tracker/src/: main.cpp
budget-tracker/src/budget/calculate-ucs/: calculate_ucb.cpp  calculate_ucd.cpp  calculate_uci.cpp  calculate_ucla.hpp  calculate_ucm.cpp  calculate_ucr.cpp  calculate_ucsb.cpp
budget-tracker/src/ui/: model.hpp
tests/: calculate_tests.hpp  unit_tests.cpp
